namespace CarWorkshop.Domain.Enums;

public enum AppointmentStatus
{
    Created,
    Confirmed,
    Cancelled
}
