namespace CarWorkshop.Domain.Enums;

public enum MechanicSpecialization
{
    Suspension,
    Alignment,
    Welding,
    Engine
}
