using CarWorkshop.Domain.Entities;

namespace CarWorkshop.Domain.Interfaces;

public interface IVehicleRepository : IRepository<Vehicle> { }
